   but hopefully it will have the sense to keep CR-LF when downloading
   to a Windows system. 

3. All .bat files now assume JHOVE_HOME is the directory from which they're
   run. They no longer try to set JAVA_HOME (which was still stuck in
   Java 1.4 and probably wasn't working for many people), instead assuming
   that the JAVA command is available on the command line.

3. All javac commands in build.xml files now specify source=1.5 for
   compatibility with more recent compilers.
   
PDF MODULE

1. Fix to PDF module, submitted by willp-bl, may reduce tendency 
   to run out of heap space on some files.

RELEASE NOTES FOR JHOVE 1.10

GENERAL

1. The amount of logging code has been increased, mostly at the
   DEBUG level.
   
2. Further work on generics in Java code.

3. JhoveView now checks for Java 1.5. Was previously allowing 1.4 even
   though it wouldn't work.

HTML MODULE

1. XHTML files are processed by the HTML module, which invokes the XML
   modules. In this case, the XML module doesn't have the parameters
   specified in the JHOVE configuration file and so won't use local
   copies of schemas. Starting with this version, the parameters of
   the HTML module are passed to the XML module when invoking it.
   However, this doesn't work properly (in either module) for a DTD
   that invokes additional DTDs by relative URLs. Such DTDs should
   be edited to use only absolute URLs.
   
PDF MODULE

1. Failure to get a page object number wasn't being handled cleanly,
   resulting in a report of an invalid document without an error message
   to explain it (SourceForge bug 49). This has been fixed.

2. The PDF module unnecessarily uses huge amounts of memory to build
   complex structure trees, when it doesn't need to keep the whole 
   tree in memory to validate it. In the new version, it uses memory
   more economically. This should result in the successful processing
   of some PDF files that ran out of memory or took hours to process before.
   