@@ -1,43 +1,0 @@
-@ECHO OFF
-REM gdump - JSTOR/Harvard Object Validation Environment
-REM Copyright 2004-2005 by the President and Fellows of Harvard College
-REM JHOVE is made available under the GNU General Public License (see the
-REM file LICENSE for details)
-REM
-REM Driver script for the GIF dump utility
-REM
-REM Usage: gdump file
-REM
-REM where file is a GIF file
-REM
-REM Configuration constants:
-REM JHOVE_HOME Jhove installation directory
-REM JAVA_HOME  Java JRE directory
-REM JAVA       Java interpreter
-REM EXTRA_JARS Extra jar files to add to CLASSPATH
-
-SET JHOVE_HOME="%~dp0"
-
-SET EXTRA_JARS=
-
-REM NOTE: Nothing below this line should be edited
-REM #########################################################################
-
-
-SET CP=%JHOVE_HOME%\bin\JhoveApp.jar
-IF "%EXTRA_JARS%"=="" GOTO FI
-  SET CP=%CP%:%EXTRA_JARS
-:FI
-
-REM Retrieve a copy of all command line arguments to pass to the application
-
-SET ARGS=
-:WHILE
-IF "%1"=="" GOTO LOOP
-  SET ARGS=%ARGS% %1
-  SHIFT
-  GOTO WHILE
-:LOOP
-
-REM Set the CLASSPATH and invoke the Java loader
-%JAVA% -classpath %CP% GDump %ARGS%
