@@ -14,7 +14,7 @@ REM JAVA_HOME  Java JRE directory
 REM JAVA       Java interpreter
 REM EXTRA_JARS Extra jar files to add to CLASSPATH
 
-SET JHOVE_HOME="%~dp0"
+SET JHOVE_HOME=%~dp0
 
 REM NOTE: Nothing below this line should be edited
 REM #########################################################################
