@@ -61,7 +61,6 @@ public class Jhove
         /* Make sure we have a satisfactory version of Java. */
         String version = System.getProperty ("java.vm.version");
         if (version.compareTo ("1.5.0") < 0) {
-            //System.err.println (NAME + ": Java 1.4 or higher is required");
             System.out.println ("Java 1.5 or higher is required");
             System.exit (-1);
         }
